# ructe

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: bench.rs
examples/actix/: Cargo.toml
examples/actix/src/: actix_ructe.rs  main.rs
examples/actix/templates/: error.rs.html  page.rs.html
examples/axum/: Cargo.toml  style.scss
examples/axum/src/: axum_ructe.rs  build.rs  main.rs
examples/axum/templates/: error.rs.html  page.rs.html
examples/ed2018/: Cargo.toml  style.scss
examples/ed2018/src/: build.rs  main.rs
examples/ed2018/static/: foo.js
examples/ed2018/templates/: page.rs.html
examples/gotham/: Cargo.toml  README.md
examples/gotham/src/: build.rs  main.rs  ructe_response.rs
examples/gotham/templates/: page.rs.html
examples/in-lib/: Cargo.toml
examples/in-lib/src/: lib.rs
examples/in-lib/templates/: hello_args.rs.html
examples/in-lib/tests/: test.rs
examples/iron/: Cargo.toml  README.md  style.scss
examples/iron/src/: build.rs  main.rs
examples/iron/templates/: page.rs.html
examples/mime03/: Cargo.toml
examples/mime03/src/: build.rs  main.rs
examples/nickel/: Cargo.toml  README.md  style.scss
examples/nickel/src/: build.rs  main.rs
examples/nickel/templates/: page.rs.html
examples/prelude/: Cargo.toml  build.rs
examples/prelude/pages/: _prelude.rs.html  pi.rs.html
examples/prelude/pages/max/: _prelude.rs.html  index.rs.html
examples/prelude/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: build.rs  main.rs
examples/simple/templates/: comments.rs.html  explicit_formatting.rs.html  for_destructure.rs.html  for_loop.rs.html  hello.rs.html  hello_args_three.rs.html  hello_args_two.rs.html  hello_code.rs.html  hello_fields.rs.html  hello_method.rs.html  hello_use_templates.rs.html  hello_utf8.rs.html  if_else_if.rs.html  if_let.rs.html  if_let_destructure.rs.html  issue_66.rs.html  issue_68.rs.html  list.rs.html  list_destructure.rs.html  list_destructure_2.rs.html  list_joins.rs.html  number_item.rs.html  page_base.rs.html  page_page.rs.html  raw_code.rs.html  some_expressions.rs.html  uselist.rs.html  with_lifetime.rs.html  with_lifetime2.rs.html
examples/simple/templates/page/: base.rs.html  base_two.rs.html  intermediate.rs.html  page.rs.html  page_two.rs.html
examples/static-sass/: Cargo.toml  style.scss
examples/static-sass/scss/: foo.scss  style.scss
examples/static-sass/src/: build.rs  main.rs
examples/static-sass/templates/: page.rs.html
examples/statics/: Cargo.toml
examples/statics/src/: build.rs  main.rs
examples/statics/static/: foo.css  style.css
examples/statics/templates/: page.rs.html
examples/tide/: Cargo.toml
examples/tide/src/: build.rs  main.rs  ructe_tide.rs
examples/tide/templates/: error.rs.html  hello.rs.html  page.rs.html
examples/warp/: Cargo.toml  style.scss
examples/warp/src/: main.rs  render_ructe.rs
examples/warp/templates/: error.rs.html  not_found.rs.html  page.rs.html
examples/warp01/: Cargo.toml
examples/warp01/src/: build.rs
examples/warp01/templates/: footer.rs.html
examples/warp02/: Cargo.toml
examples/warp02/src/: main.rs
examples/warp02/templates/: error.rs.html
examples/warp03/: Cargo.toml
examples/warp03/src/: build.rs  main.rs
examples/warp03/templates/: base.rs.html  error.rs.html  intermediate.rs.html  page.rs.html
src/: How_to_use_ructe.rs  Template_syntax.rs  Using_static_files.rs  engine.rs  errors.rs  expression.rs  lib.rs  nom_delimited_list.rs  parseresult.rs  spacelike.rs  staticfiles.rs  statics_mime.rs  statics_utils.rs  template.rs  template_utils.rs  template_utils_warp.rs  template_utils_warp02.rs  templateexpression.rs
src/templates/: mod.rs  utils.rs  utils_warp03.rs
