[package]
name = "ructe"
version = "0.11.5-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Rust Compiled Templates, efficient type-safe web page templates."
documentation = "https://docs.rs/ructe"
repository = "https://github.com/kaj/ructe"
readme = "README.md"
keywords = ["web", "templating", "template", "html"]
categories = ["template-engine", "web-programming"]
license = "MIT/Apache-2.0"

[features]
sass = ["rsass"]
sri = ["ssri"]
mime02 = []
mime03 = ["mime"]
warp02 = ["mime03"]

[dependencies]
base64 = "^0.12.0"
bytecount = "0.6.0"
itertools = "0.9.0"
md5 = "0.7"
nom = "5.0.0"

rsass = { version = "0.13.0", optional = true }
ssri = { version = "5.0.0", optional = true }
mime = { version = "0.3", optional = true }

[badges]
travis-ci = { repository = "kaj/ructe" }
maintenance = { status = "actively-developed" }
