[package]
name = "ructe"
version = "0.13.1-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Rust Compiled Templates, efficient type-safe web page templates."
documentation = "https://docs.rs/ructe"
repository = "https://github.com/kaj/ructe"
readme = "README.md"
keywords = ["web", "templating", "template", "html"]
categories = ["template-engine", "web-programming"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
sass = ["rsass"]
mime02 = []
mime03 = ["mime"]
warp02 = ["mime03"]
warp03 = ["mime03"]
http-types = []
tide016 = ["tide013"]
tide015 = ["tide013"]
tide014 = ["tide013"]
tide013 = ["http-types"]

[dependencies]
base64 = "^0.13"
bytecount = "0.6.0"
itertools = "0.10.0"
md5 = "0.7"
nom = "6.1.0"

rsass = { version = "0.19.0", optional = true }
mime = { version = "0.3", optional = true }

[badges]
travis-ci = { repository = "kaj/ructe" }
maintenance = { status = "actively-developed" }
