[package]
name = "ructe"
version = "0.18.1-PRE"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
description = "Rust Compiled Templates, efficient type-safe web page templates."
documentation = "https://docs.rs/ructe"
repository = "https://github.com/kaj/ructe"
readme = "README.md"
keywords = ["web", "templating", "template", "html"]
categories = ["template-engine", "web-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"

[features]
sass = ["dep:rsass"]
mime03 = ["dep:mime"]
warp03 = ["mime03"]
http-types = []
tide016 = ["tide013"]
tide015 = ["tide013"]
tide014 = ["tide013"]
tide013 = ["http-types"]

[dependencies]
base64 = "0.22.1"
bytecount = "0.6.0"
md5 = "0.7"
nom = "8.0.0"
nom-language = "0.1.0"

rsass = { version = "0.29.0", optional = true }
mime = { version = "0.3", optional = true }

[badges]
travis-ci = { repository = "kaj/ructe" }
maintenance = { status = "actively-developed" }
