[package]
name = "axum"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["sass", "mime03"] }

[dependencies]
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"
mime = "0.3"
tokio = { version = "1.21.2", default-features = false, features = ["rt-multi-thread", "macros"] }
