[package]
name = "gotham-ructe"
version = "0.12.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["sass", "mime03"] }

[dependencies]
gotham = "0.6.0"
gotham_derive = "0.6.0"
serde = { version="1.0", features = ["derive"] }
mime = "0.3.8"
