[package]
name = "gotham-ructe"
version = "0.12.0"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["sass", "mime03"] }

[dependencies]
gotham = "0.7.1"
gotham_derive = "0.7.0"
serde = { version="1.0", features = ["derive"] }
mime = "0.3.8"
