[package]
name = "gotham-ructe"
version = "0.12.0"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
edition = "2024"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["sass", "mime03"] }

[dependencies]
gotham = "0.8.0"
gotham_derive = "0.8.0"
serde = { version="1.0", features = ["derive"] }
mime = "0.3.8"
