[package]
name = "ructe-tide"
version = "0.4.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["tide015", "sass"] }

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
tide = "0.15.0" # Note: Feature flag for ructe matches this version
httpdate = "0.3.1"
