[package]
name = "ructe-tide"
version = "0.4.0"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["tide016", "sass"] }

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
tide = "0.16.0"
httpdate = "1.0.0"
