[package]
name = "warp-ructe"
version = "0.4.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["warp02", "sass", "sri"] }

[dependencies]
warp = "0.2.0"
mime = "0.3.0"
env_logger = "0.7.1"
tokio = { version = "0.2.9", features = ["macros"] }
