[package]
name = "warp-ructe"
version = "0.4.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2021"

build = "src/build.rs"

[build-dependencies]
ructe = { path = "../..", features = ["warp03", "sass"] }

[dependencies]
warp = "0.3.0"
mime = "0.3.0"
env_logger = "0.11.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
